syntax = "proto3";
package com.kkennib.grpc;

// Request payload
message KeywordFormat {
  string groupId = 1;
  string keywords = 2;
  string dates = 3;
  string siteTypes = 4;
  string currentState = 5;
  string operators = 6;
  int64 totalWorkCount = 7;
  int64 finishedWorkCount = 8;
  string topicName = 9;
  string keyword = 10;
  string siteType = 11;
  string startDate = 12;
  string endDate = 13;
  string packgedFileName = 14;
}

message WorkResponse {
  string groupId = 1;
  string result = 2;
  float rate = 3;
}

message WorkList {
  repeated KeywordFormat list = 1;
}

service GreetingService {
  rpc createWork(KeywordFormat) returns (WorkResponse);
  rpc beginWork(KeywordFormat) returns (WorkResponse);
  rpc resumeWork(KeywordFormat) returns (WorkResponse);
  rpc terminateWork(KeywordFormat) returns (WorkResponse);
  rpc pauseWork(KeywordFormat) returns (WorkResponse);
  rpc getCurrentState(KeywordFormat) returns (stream WorkResponse);
  rpc getWorkTable(KeywordFormat) returns (WorkList);
  rpc greeting(KeywordFormat) returns (WorkResponse);
}